# AES_Seminar

./: README.md  pyproject.toml
crewai/: agents.py  customTools.py  main.py  pyproject.toml  tasks.py
n8n/: Main.json  SubRead.json  SubTree.json  SubWriter.json  n8n log.txt
openai/: openaisdk.py
src/aes_1/: crew.py  main.py  main_new.py  task_handler.py
